Changes to be committed:   (use "git reset HEAD <file>..." to unstage)
	modified:   Gemfile
	modified:   Gemfile.lock
	new file:   Procfile
	new file:   web.rb

--- a/MyApp/Gemfile
+++ b/MyApp/Gemfile
@@ -7,7 +7,8 @@ gem 'rails', '3.1.1'
 
 gem 'sqlite3'
 gem 'heroku'
-
+gem 'sinatra', '1.1.0'
+gem 'thin', '1.2.7'
 
 # Gems used only for assets and not required
 # in production environments by default.
