--- a/MyApp/Gemfile
+++ b/MyApp/Gemfile
@@ -5,7 +5,7 @@ gem 'rails', '3.1.1'
 # Bundle edge Rails instead:
 # gem 'rails',     :git => 'git://github.com/rails/rails.git'
 
-gem 'sqlite3-ruby'
+gem 'sqlite3-ruby', '1.2.5', :group => :development
 gem 'heroku'
 gem 'sinatra', '1.1.0'
 gem 'thin', '1.2.7'
